--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,9 @@ cython_debug/
 
 # MacOS resourece file
 .DS_Store
+
+# Flask Plugin JSON Schema
+plugin.schema.json
+
+# Manager cache dir
+.temp/
